2010-07-24  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* COPYING: Renamed to COPYING.LGPLv2.

	* COPYING.LGPLv2: New. Former COPYING.

	* COPYING.GPLv2: New.

	* MANIFEST: Updated.

2010-07-15  Raimund Renkert <raimund.renkert@intevation.de>

	* base/CMakeLists.txt: Added crosscompile support for mingw32.

2010-07-14  Michael Wiegand <michael.wiegand@greenbone.net>

	Post-release version bump.

	* VERSION: Set to 3.1.1.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2010-07-14  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-libraries 3.1.0 release.

	* CHANGES: Updated.

	* VERSION: Set to 3.1.0.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2010-07-14  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/openvas-lsc-rpm-creator.sh: Updated with new version generated
	by ../tools/openvas-lsc-target-preparation.

2010-07-13  Matthew Mundell <matthew.mundell@greenbone.net>

	* omp/omp.c (omp_get_nvt_all): Switch to GET_NVTS.
	(omp_get_status): Align param.
	(omp_get_tasks): Add details arg.  Update caller.
	(omp_get_report): Add s to command.
	(omp_get_nvt_details_503): Switch to GET_NVTS.

	* omp/omp.h: Update header accordingly.

2010-07-09  Michael Wiegand <michael.wiegand@greenbone.net>

	Make cmake environment more flexible as discussed on openvas-devel.

	* configure.in: Add new configuration options
	--enable-verbose-makefile and --enable-cmake-release and pass their
	values to the output files.

	* configure: Regenerated.

	* openvas-libraries.tmpl.in: Add new variables VERBOSE_MAKEFILE and
	BUILD_TYPE.

	* Makefile (all): Add VERBOSE_MAKEFILE and BUILD_TYPE to the calls to
	cmake.

	* base/CMakeLists.txt, hg/CMakeLists.txt, misc/CMakeLists.txt,
	nasl/CMakeLists.txt, omp/CMakeLists.txt: Set CMAKE_BUILD_TYPE only to
	"Debug" if it is not already set. Do not set CMAKE_VERBOSE_MAKEFILE,
	let it default to OFF.

2010-07-08  Matthew Mundell <matthew.mundell@greenbone.net>
