@@ -1,3 +1,35 @@
+/* OpenVAS
+ * $Id$
+ * Description: IDS stressing functions.
+ *
+ * ids_send() sends data spliced into several packets, with bad packets
+ * between them, thus making bad NIDSes reassemble the tcp stream awkwardly;
+ *
+ * ids_open_sock_tcp() opens a tcp socket and immediately sends a badly
+ * formed RST packet to the remote host, thus making bad NIDSes think
+ * the connection was immediately dropped on our end.
+ *
+ * Authors:
+ * Renaud Deraison <deraison@nessus.org> (Original pre-fork development)
+ *
+ * Copyright:
+ * Based on work Copyright (C) 1998 - 2002 Renaud Deraison
+ *
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Library General Public
+ * License as published by the Free Software Foundation; either
+ * version 2 of the License, or (at your option) any later version.
+ *
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Library General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+ */
+
 #ifndef __OPENVAS_IDS_SEND_H__
 #define __OPENVAS_IDS_SEND_H__
 
