@@ -1,3 +1,9 @@
+2010-07-25  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	* misc/ids_send.h: Added missing header with author, copyright
+	and license. Since this header file was developed for ids_send.c
+	the full header of ids_send.c is used for ids_send.h as well.
+
 2010-07-24  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	* COPYING: Renamed to COPYING.LGPLv2.
